[package]
name = "tqm-sensor"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.7.2"
serde = { version="1.0.219", default-features = false , features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking"] }
chrono = "0.4"
config = { version = "0.15.11", default-features = false,  features = ["toml"] }
env_logger = "0.11.8"
log = "0.4.27"
rsdate = { path = "./rsdate" }

[profile.release]
strip = true