[package]
name = "rsdate"
version = "0.5.0"
edition = "2018"

authors = [
    "Wesley Moore <wes@wezm.net>"
]
homepage = "https://github.com/wezm/rsdate"
repository = "https://github.com/wezm/rsdate.git"

readme = "README.md"
license = "MIT OR Apache-2.0"

description = "rsdate connects to an ntp server, printing the returned time and/or sets the system clock."
keywords = ["ntp", "time", "date"]
categories = ["command-line-utilities", "date-and-time"]

[dependencies]
libc = "0.2.126"
log = "0.4.17"
rsntp = { version = "3.0.1", default-features = false, features = ["time"] }
syslog = "6.0.1"
time = { version = "0.3.11", features = ["local-offset"] }

[lib]
path = "src/lib.rs"